# Flang-Modernization-Advisor-for-Legacy-Fortran

./: .gitignore  CASE_STUDY.md  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  LICENSE  README.md  app.py  build.sh  run.sh
build_wsl/: Makefile
demo/: Demo report.json  README.md
docs/: architecture.md
include/LegacyFortranAdvisor/: FlangASTPatternVisitor.h  FlangFrontend.h  ImpactAnalyzer.h  PatternDetector.h  Prioritization.h  Types.h
src/: FlangASTPatternVisitor.cpp  FlangFrontend.cpp  ImpactAnalyzer.cpp  PatternDetector.cpp  Prioritization.cpp  main.cpp
tests/: enterprise_simulation.f90  hello.f90  legacy_patterns.f90  mismatch_patterns.f90  modernized_simulation.f90  syntax_valid.f90
web/: index.html
